fix wrapping

--- a/frontend/app/src/style.scss
+++ b/frontend/app/src/style.scss
@@ -585,10 +585,11 @@ section.search {
     display: flex;
     justify-content: left;
     align-items: center;
+    flex-wrap: wrap;
     .item {
       margin: 15px;
       display: block;
-      width: 300px;
+      width: 280px;
       height: 400px;
       border-bottom: 2px solid #3c4148;
       border: 1px solid rgba(0, 0, 0, 0.3);
@@ -598,10 +599,11 @@ section.search {
         font-weight: 600;
       }
       p {
-        margin: 5px 8px;
+        margin: 6px 20px;
         text-align: left;
         font-family: Tahoma;
         font-weight: 600;
+        line-height: 20px;
       }
       h3 {
         margin: 15px auto;
@@ -610,7 +612,7 @@ section.search {
       img {
         object-fit: cover;
         width: 100%;
-        height: 250px;
+        height: 200px;
         // height: 100%;
       }
     }
